[package]
name = "canvas-filler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full", "fs", "sync", "time"] }
tokio-tungstenite = { version = "0.21", optional = true }
tokio-stream = "0.1.9"
warp = "0.3"
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.6.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
